images and captions

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -39,7 +39,7 @@
       Especially if they’ve been publicly questioned by the leader of the free world.<br><br></p>
 
       <figure>
-        <img src="rapinoe2.jpg" alt="megan rapinoe portrait" width="900" height="600"><br>
+        <img src="rapinoe2.jpg" alt="megan rapinoe pose" width="900" height="600"><br>
         <figcaption>Megan Rapinoe's signature pose. (Source: SI.com)</figcaption>
       </figure>
 
@@ -61,6 +61,11 @@
       <p>As for The Pose? “It was kind of like a ‘F--- you,’ but with a big smile and a s--- eating grin,” Rapinoe says. “You are not going to steal any of our joy.”<br><br></p>
 
     <h2>Sportsperson of the Year</h2>
+
+    <figure>
+      <img src="rapinoe7.jpg" alt="megan rapinoe soccer" width="900" height="600"><br>
+      <figcaption>Megan Rapinoe fights to stay in posession of the ball (Source: SI.com)</figcaption>
+    </figure>
 
       <p>Yes, the U.S. women have been here before. But the ’19ers were more dominant than the team that won four years ago—they never trailed in France; they scored a record 26 goals—and they were even
       bolder than the ’99ers who collectively captured SI’s year-end award two decades ago. Julie Foudy, co-captain of that team, asked her old cohort Mia Hamm about the equal-pay lawsuit,
@@ -105,6 +110,11 @@
       <p>Megan Rapinoe is Sportsperson of the Year, though, not because of her newfound fame but because of how she’s handled it. She owned the biggest moment of her life and silenced all the doubts. Except, perhaps, her own.<br><br></p>
 
     <h2> Standing up for what you believe</h2>
+
+    <figure>
+      <img src="rapinoe6.jpg" alt="megan rapinoe fans" width="900" height="600"><br>
+      <figcaption>A fan wears Rapinoe's Team USA jersey amidst a celbratory crowd (Source: SI.com)</figcaption>
+    </figure>
 
       <p>It’s early November and Rapinoe is standing on a frosty field in Greenwich, Conn., popping cough drops to combat a cold she picked up after having spent maybe three days at home in the last month. She and Rachael held a soccer clinic in Farming­ville, N.Y., last night;
       today they have two more sold-out sessions, 175 kids each, before Megan will rush to catch a flight to Columbus for the last national team camp of the year. Denise and the twins’ Aunt Melissa are working the check-in desk, and there’s no security here—which is fine,
