graphic and image

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -82,6 +82,13 @@
       But what she really meant was: You have to win it. Rapinoe never would have bet on herself to take that award (for which she ultimately edged out Morgan) or the Golden Ball (for MVP) or to be named FIFA’s Women’s World
       Player of the Year two months later. “I’m not sure I’m the best player on my own team,” she admits.<br><br></p>
 
+      <a href="https://www.statista.com/chart/18617/womens-world-cup-historical-results/"
+        title="Infographic: U.S. Women's National Team Clinches Fourth World Cup |
+        Statista"><img src="https://cdn.statcdn.com/Infographic/images/normal/18617.jpeg"
+        alt="Infographic: U.S. Women's National Team Clinches Fourth World Cup | Statista"
+        width="100%" height="auto" style="width: 100%; height: auto !important;
+        max-width:960px;-ms-interpolation-mode: bicubic;"/></a>
+
       <p>Hers is another kind of magic. Sure, she scored six times, five of those in elimination rounds. But in her three decades preparing for this stage, she never expected to have to perform while the president
       of her country taunted her and a nonzero percentage of Americans rooted for her to fail.<br><br></p>
 
@@ -113,7 +120,7 @@
 
     <figure>
       <img src="rapinoe6.jpg" alt="megan rapinoe fans" width="900" height="600"><br>
-      <figcaption>A fan wears Rapinoe's Team USA jersey amidst a celbratory crowd (Source: SI.com)</figcaption>
+      <figcaption>A fan wears Rapinoe's Team USA jersey amidst a celebratory crowd (Source: SI.com)</figcaption>
     </figure>
 
       <p>It’s early November and Rapinoe is standing on a frosty field in Greenwich, Conn., popping cough drops to combat a cold she picked up after having spent maybe three days at home in the last month. She and Rachael held a soccer clinic in Farming­ville, N.Y., last night;
