--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <div id="container">
 
     <div class="masthead">
       From the Pitch to the Page
@@ -82,13 +83,6 @@
       But what she really meant was: You have to win it. Rapinoe never would have bet on herself to take that award (for which she ultimately edged out Morgan) or the Golden Ball (for MVP) or to be named FIFA’s Women’s World
       Player of the Year two months later. “I’m not sure I’m the best player on my own team,” she admits.<br><br></p>
 
-      <a href="https://www.statista.com/chart/18617/womens-world-cup-historical-results/"
-        title="Infographic: U.S. Women's National Team Clinches Fourth World Cup |
-        Statista"><img src="https://cdn.statcdn.com/Infographic/images/normal/18617.jpeg"
-        alt="Infographic: U.S. Women's National Team Clinches Fourth World Cup | Statista"
-        width="100%" height="auto" style="width: 100%; height: auto !important;
-        max-width:960px;-ms-interpolation-mode: bicubic;"/></a>
-
       <p>Hers is another kind of magic. Sure, she scored six times, five of those in elimination rounds. But in her three decades preparing for this stage, she never expected to have to perform while the president
       of her country taunted her and a nonzero percentage of Americans rooted for her to fail.<br><br></p>
 
@@ -150,6 +144,13 @@
       <p>Kaepernick’s peaceful protest first caught the eye of the nation in August 2016. Rapinoe joined nine days later, before a game with her NWSL club, Seattle Reign. “He needs support,” she remembers thinking, “and I can help.” That September she warned U.S. teammates:
       She would kneel again before a friendly against Thailand, and she knew it might be uncomfortable for them. “All of us were a little timid about it,” says defender Ali Krieger, who supported Rapinoe but told her she wouldn’t join in. “We didn’t want to lose our jobs,
       and we weren’t sure how U.S. Soccer was going to react, how the country was going to react. She took all of that criticism.”<br><br></p>
+
+      <a href="https://www.statista.com/chart/18617/womens-world-cup-historical-results/"
+        title="Infographic: U.S. Women's National Team Clinches Fourth World Cup |
+        Statista"><img src="https://cdn.statcdn.com/Infographic/images/normal/18617.jpeg"
+        alt="Infographic: U.S. Women's National Team Clinches Fourth World Cup | Statista"
+        width="100%" height="auto" style="width: 100%; height: auto !important;
+        max-width:960px;-ms-interpolation-mode: bicubic;"/></a>
 
       <p>When U.S. Soccer released a statement during the Thailand match saying that players and coaches were expected to stand for the anthem “as part of the privilege to represent your country,” and when Rapinoe was benched or kept off the roster for friendlies
       in October and November, and when again she was left off the roster for the ­SheBelieves Cup the following spring, yes, she worried that it all spelled the end of her days as a U.S. player. At the time coach Jill Ellis chalked up the moves to roster churn
