--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -15,6 +15,10 @@
 
     <h1>The Story of Megan Rapinoe, Hero of the World Cup</h1>
 
+      <div id="byline">
+        Michael Chow-USA TODAY Sports
+      </div>
+
     <figure>
       <img src="rapinoe1.jpg" alt="megan rapinoe portrait" width="900" height="550"><br>
       <figcaption>Megan Rapinoe is Sports Illustrated's 2019 Sportsperson of the Year. (Source: SI.com)</figcaption>
