--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -9,7 +9,7 @@
 
     <div id="container">
 
-      <!-- Masthead/banner is soccer themed and represents a soccer field -->
+      <!-- Masthead/banner is soccer themed and represents a soccer field with red + green colors -->
 
       <div class="masthead">
       From the Pitch to the Page
@@ -166,6 +166,8 @@
       the appropriate thing to do in a national team jersey? I didn’t know,” Ellis says. “But I certainly understood it, and in no way was I saying, You can’t do it.”)<br><br></p>
 
       <p>In the end, “it just so happens that I came back with a vengeance, better than I had ever been,” Rapinoe says. “And then it was like, Well, you are stuck with me now.”<br><br></p>
+
+      <!-- links to Megan Rapinoe related stories and other content related to the USWNT -->
 
       <h3>Read More</h3>
         <ul>
