updated css and html

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -105,6 +105,8 @@
       a flight home to Seattle when U.S. teammates began texting warnings: You cannot go through airport security! They were getting mobbed, even without the pink-haired national hero. Rapinoe had no idea what to do.
       She didn’t have the means for personal security or a private flight. In the end, her agent hastily arranged for access to a VIP entrance to the airport, something Rapinoe had never considered before.<br><br></p>
 
+      <font size="+2"><blockquote> “You are not going to steal any of our joy.” </blockquote></font>
+
       <p>In the months since: Michelle Obama recruited Rapinoe to join in a voter-participation initiative. Gloria Steinem, the original feminist icon, thanked Rapinoe for carrying her torch. A high school girls’ soccer team in Burlington, Vt.,
       staged its own campaign in support of equal pay, and an 11-year-old boy in Geneva, Ill., went viral for his pink-haired Halloween costume, each inspired by Rapinoe. She has been invited to Washington by New York congresswoman Alexandria Ocasio-Cortez;
       talked politics on Meet the Press, Pod Save America and CNN; and turned into a coveted endorsement for the 2020 election. No, she’s not running for office anytime soon. “I don’t have plans for policies and how to implement them,” she says. “I’ll just be the jabber.”
