div class and id

--- a/resume/index1.html
+++ b/resume/index1.html
@@ -4,4 +4,39 @@
     <title>Joy Saha Resume</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
+
   <body>
+    <div id="container">
+
+    <div class="banner">
+      <img src="banner2.jpg" alt="colorful banner" width="900" height="550">
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+  </body>
+</html>
