--- a/resume/index1.html
+++ b/resume/index1.html
@@ -8,8 +8,8 @@
   <body>
     <div id="container">
 
-    <div class="banner">
-      <img src="banner2.jpg" alt="colorful banner" width="900" height="550">
+    <div class="masthead">
+      <img src="banner3.jpg" alt="colorful banner" width="900" height="550">
     </div>
 
 
