--- a/resume/index1.html
+++ b/resume/index1.html
@@ -8,7 +8,7 @@
   <body>
     <div id="container">
 
-    <div class="masthead">
+    <div class="banner">
       <img src="banner3.jpg" alt="colorful banner" width="900" height="550">
     </div>
 
