--- a/resume/index1.html
+++ b/resume/index1.html
@@ -9,7 +9,7 @@
     <div id="container">
 
     <div class="banner">
-      <img src="banner3.jpg" alt="colorful banner" width="900" height="550">
+      <img src="banner1.jfif" alt="colorful banner" width="900" height="550">
     </div>
 
 
