--- a/resume/index1.html
+++ b/resume/index1.html
@@ -8,8 +8,11 @@
   <body>
     <div id="container">
 
-    <div class="banner">
-      <img src="banner4.jpg" alt="colorful banner">
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>Joy Saha</h1>
+        <p>Senior Journalism Student</p>
+      </div>
     </div>
 
 
