--- a/resume/index1.html
+++ b/resume/index1.html
@@ -9,11 +9,14 @@
     <div id="container">
 
     <div class="hero-image">
-      <div class="hero-text">
+      <img src="banner4.jpg" alt="colorful banner" 
+    </div>
+
+    <div class="hero-text">
         <h1>Joy Saha</h1>
         <p>Senior Journalism Student</p>
-      </div>
     </div>
+
 
 
 
