--- a/resume/index1.html
+++ b/resume/index1.html
@@ -8,14 +8,10 @@
   <body>
     <div id="container">
 
-    <div class="hero-image">
-      <img src="banner4.jpg" alt="colorful banner" 
+    <div class="banner">
+      <img src="banner6.jpg" alt="colorful banner">
     </div>
 
-    <div class="hero-text">
-        <h1>Joy Saha</h1>
-        <p>Senior Journalism Student</p>
-    </div>
 
 
 
