fonts and banner

--- a/resume/index1.html
+++ b/resume/index1.html
@@ -8,9 +8,18 @@
   <body>
     <div id="container">
 
-    <div class="banner">
-      <img src="banner6.jpg" alt="colorful banner">
-    </div>
+      <ul class="menu">
+        jaitysaha270@gmail.com
+        <a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a>
+        <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a>
+        <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
+      </ul>
+
+      <div class="banner">
+        <img src="banner6.jpg" alt="colorful banner">
+      </div>
+
+
 
 
 
