html adobe banner

--- a/resume/index1.html
+++ b/resume/index1.html
@@ -16,7 +16,7 @@
       </ul>
 
       <div class="banner">
-        <img src="banner10.jpg" alt="colorful banner" width="1280">
+        <img src="banner11.png" alt="colorful banner" width="1280">
       </div>
 
       <div id="name"><h1>Joy Saha</h1></div>
