--- a/resume/index1.html
+++ b/resume/index1.html
@@ -15,46 +15,9 @@
         <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
       </ul>
 
-      <div class="banner">
-        <img src="banner11.png" alt="colorful banner" width="1280">
+      <div class="resume">
+        <img src="resume3.jpg" alt="adobe custom resume" width="1280">
       </div>
-
-      <div id="name"><h1>Joy Saha</h1></div>
-
-      <p class=" description top">
-          I am a current senior at the University of Maryland studying multi-platform
-        journalism. I'm interested in writing long-form feature stories specifically
-        focused on arts, culture and entertainment. After graduation, I plan on
-        attending law school. </p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     </div>
   </body>
