--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Joy Saha Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
 
