--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -36,10 +36,10 @@
           Dropdown
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Action One</a>
+          <a class="dropdown-item" href="#">Action Two</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">Additional Actions</a>
         </div>
       </li>
       <li class="nav-item">
