--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -69,7 +69,18 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
       <h1>The Headline Goes Here</h1>
       <p>By Byline</p>
 
-      <h2>The Chapter Headline</h2>
+      <h2>Chapter Headline</h2>
+
+        <div class="paragraph text"
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus tellus in urna tincidunt commodo.
+            Pellentesque non magna vitae mi tincidunt vulputate non nec magna. Nullam in placerat metus. Cras commodo imperdiet mi non tristique.
+            Praesent commodo venenatis diam a rutrum. Ut a cursus quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+            Integer efficitur ligula elit, non bibendum ligula consequat nec. <br><br></p>
+
+            <figure>
+              <img src="rapinoe2.jpg" alt="megan rapinoe pose" width="900" height="600"><br>
+              <figcaption>Megan Rapinoe's signature pose. (Source: SI.com)</figcaption>
+            </figure>
 
 
 
