--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -77,10 +77,20 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             Praesent commodo venenatis diam a rutrum. Ut a cursus quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
             Integer efficitur ligula elit, non bibendum ligula consequat nec. <br><br></p>
 
+          <p> Curabitur sapien ligula, hendrerit eget elementum et, porta id metus. Donec a vehicula massa. Nunc sit amet lacus nec ipsum placerat cursus vitae vel magna.
+            Fusce ex dui, malesuada sed erat sit amet, tempor fermentum tortor. Morbi eget justo non nisi sodales sollicitudin at nec mauris.
+            Etiam vestibulum facilisis tempus. Donec tristique dui non mauris ullamcorper, sodales mattis urna tempor. Vestibulum rutrum tempus suscipit.
+            Pellentesque velit diam, semper eget tristique eget, ultricies non sem. Vivamus pulvinar venenatis mauris sit amet cursus. Maecenas metus mauris, pulvinar eget nisl eu,
+            venenatis semper tortor. Ut porta quis nisl at tempor. Nunc eu lectus a odio pretium dictum in eget neque. <br><br></p>
+
             <figure>
-              <img src="rapinoe2.jpg" alt="megan rapinoe pose" width="900" height="600"><br>
-              <figcaption>Megan Rapinoe's signature pose. (Source: SI.com)</figcaption>
+              <img src="guggenheim.jpg" alt="the guggenheim museum in nyc" width="900" height="600"><br>
+              <figcaption>The Guggenheim Museum on 5th Avenue, New York, NY (Source: citibikenyc.com)</figcaption>
             </figure>
+
+          <p>
+
+
 
 
 
