--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -71,7 +71,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
       <h2>Chapter Headline</h2>
 
-        <div class="paragraph text"
+        <div class="paragraph">
           <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus tellus in urna tincidunt commodo.
             Pellentesque non magna vitae mi tincidunt vulputate non nec magna. Nullam in placerat metus. Cras commodo imperdiet mi non tristique.
             Praesent commodo venenatis diam a rutrum. Ut a cursus quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
@@ -93,9 +93,6 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             libero lacinia dapibus. Morbi magna orci, commodo ut ultrices in, tincidunt eget enim. Vivamus dictum odio nec risus fringilla interdum. Nulla ac laoreet turpis.
             Fusce sollicitudin condimentum diam laoreet varius. Sed ac tincidunt ipsum. Nunc et ullamcorper leo. Aliquam eget velit quis mauris porttitor pulvinar.<br><br></p>
           </div>
-
-
-
 
 
     </div>
