--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -84,8 +84,8 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             venenatis semper tortor. Ut porta quis nisl at tempor. Nunc eu lectus a odio pretium dictum in eget neque. <br><br></p>
 
             <figure>
-              <img src="guggenheim.jpg" alt="the guggenheim museum in nyc" width="900" height="600"><br>
-              <figcaption>The Guggenheim Museum on 5th Avenue, New York, NY (Source: citibikenyc.com)</figcaption>
+              <img src="guggenheim.jpg" alt="insert description of image here" width="900" height="600"><br>
+              <figcaption>Caption: insert description for image/video (Source: insert source)</figcaption>
             </figure>
 
           <p>Integer tincidunt ante eu ornare maximus. Aliquam luctus quam turpis, ac bibendum risus faucibus a. Integer mattis, lacus at feugiat tincidunt,
@@ -93,6 +93,9 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
             libero lacinia dapibus. Morbi magna orci, commodo ut ultrices in, tincidunt eget enim. Vivamus dictum odio nec risus fringilla interdum. Nulla ac laoreet turpis.
             Fusce sollicitudin condimentum diam laoreet varius. Sed ac tincidunt ipsum. Nunc et ullamcorper leo. Aliquam eget velit quis mauris porttitor pulvinar.<br><br></p>
 
+      <footer>
+        <p>Footer Text</p>
+      </footer>
 
     </div>
 
