--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Joy Saha Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+    <title>Joy Saha Resume</title>
+
+    <meta name="description" content="Joy Saha Resume">
+    <meta name="author" content="Joy Saha">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- stylesheet CSS -->
+    <link rel="stylesheet" type="text/css" href="stylesheet.css"
   </head>
 
+
+
   <body>
-    <div id="container">
-
-      <ul class="menu">
-        jaitysaha270@gmail.com
-        <a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a>
-        <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a>
-        <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
-      </ul>
-
-      <div class="resume">
-        <img src="resume3.jpg" alt="adobe custom resume" width="1280">
-      </div>
-
-    </div>
   </body>
 </html>
