--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -3,21 +3,34 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Joy Saha Resume</title>
+    <title>Joy Saha</title>
 
     <meta name="description" content="Joy Saha Resume">
     <meta name="author" content="Joy Saha">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <!-- stylesheet CSS -->
-    <link rel="stylesheet" type="text/css" href="stylesheet.css"
+    <!-- custom CSS stylesheet -->
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Text&family=Lobster&family=Satisfy&display=swap');
+    </style>
   </head>
 
-
-
   <body>
+    <div id="container">
+
+      <div class="header">
+        <h1>Joy Saha</h1>
+        <p>Senior Journalism Student at University of Maryland</p>
+      </div>
+
+
+
+
+    </div>
   </body>
 </html>
