new profile picture

--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -17,6 +17,7 @@
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Text&family=Lobster&family=Satisfy&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Cutive&family=Space+Mono:ital@0;1&display=swap');
     </style>
   </head>
 
@@ -24,11 +25,37 @@
     <div id="container">
 
       <div class="header">
-        <h1>Joy Saha</h1>
+        <h1>Joy Saha</h1> &nbsp
         <p>Senior Journalism Student at University of Maryland</p>
       </div>
 
+      <div class="row">
+          <div class="column" style="background-color:white;">
+            <img src="profilejoy (2).jpg" alt="A picture of Joy Saha" width="300px" height:"300px">
+          </div>
 
+          <div class="column" style="background-color:white;">
+            <h2>About Joy</h2>&nbsp
+              <div class="intro">
+            <p>I am a current senior at the University of Maryland studying multi-platform
+                journalism. I'm interested in writing long-form feature stories specifically
+                focused on arts, culture and entertainment. After graduation, I plan on
+                attending law school.</p>
+              </div>
+          </div>
+      </div>
+
+      <div class="row">
+        <div class="column" style="background-color:white;">
+          <h2>Experience</h2>
+          <p>Some text..</p>
+        </div>
+
+        <div class="column" style="background-color:white;">
+          <h2>Education</h2>
+          <p>Some text..</p>
+        </div>
+      </div>
 
 
     </div>
