--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -31,7 +31,7 @@
 
       <div class="row">
           <div class="column" style="background-color:white;">
-            <img src="profilejoy (2).jpg" alt="A picture of Joy Saha" width="350px" height:"350px">
+            <img src="profilejoy (2).jpg" alt="A picture of Joy Saha" width="300px" height:"300px">
           </div>
 
           <div class="column" style="background-color:white;">
@@ -42,13 +42,53 @@
                 focused on arts, culture and entertainment. After graduation, I plan on
                 attending law school.</p>
               </div>
+              <ul class="menu">
+                jaitysaha270@gmail.com
+                <a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a>
+                <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter
+                <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
+              </ul>
           </div>
       </div>
 
       <div class="row">
         <div class="column" style="background-color:white;">
           <h2>Experience</h2>
-          <p>Some text..</p>
+          <p>
+            <font size="+1"><b>Editor-In-Chief</font></b><br>
+            Unwind Magazine<br>
+            <i>2020-Present</i><br>
+            Manage a staff of writers, general assignment writers, section editors, photo editors
+            and photographers. Previously served as a section editor and photographer for two years.<br>
+          </p>
+
+          <p>
+            <font size="+1"><b>Staff Writer</font></b><br>
+            The Luna Collective<br>
+            <i>2020 - Present</i><br>
+            Write and pitch feature stories + profiles about film photographers, bands and musicians
+            for the digital + print editions of this Gen Z centric creative magazine.<br>
+          </p>
+
+          <p>
+            <font size="+1"><b>Newsroom Intern</font></b><br>
+            Voice of America<br>
+            <i>2020 - 2021</i><br>
+            Worked as an intern for VOA's social media desk. Used Adobe Photoshop and Adobe Spark to create +
+            edit photo galleries, personalized photo posters and photo collages for social media and news stories
+            that are engaging for an international audience. Wrote captions and short news
+            blurbs to supplement photos.<br>
+          </p>
+
+          <p>
+            <font size="+1"><b>News/Features Intern</font></b><br>
+            Mid-Atlantic Media<br>
+            <i>June 2020 – August 2020</i><br>
+            Wrote and pitched stories for Washington FAMILY Magazine and Montgomery Magazine. Stories included
+            profile pieces about local events and in-depth feature pieces about community-based initiatives related
+            to the ongoing social justice movements. Also fact-checked and edited freelance stories using
+            AP Style guidelines.<br>
+          </p>
         </div>
 
         <div class="column" style="background-color:white;">
