--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -15,7 +15,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- stylesheet CSS -->
-    <link rel="stylesheet" type="text/css" href="stylesheet.css"
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
 
   <body>
