--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -89,6 +89,15 @@
             to the ongoing social justice movements. Also fact-checked and edited freelance stories using
             AP Style guidelines.<br>
           </p>
+
+          <p>
+            <font size="+1"><b>Diversions Reporter</font></b><br>
+            The Diamondback<br>
+            <i>2018-2021</i><br>
+            Wrote and pitched arts and culture stories for this award-winning student run newspaper. Served as writer
+            on the visual arts and music beats.<br>
+          </p>
+
         </div>
 
         <div class="column" style="background-color:white;">
