--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -26,7 +26,7 @@
 
       <div class="header">
         <h1>Joy Saha</h1> &nbsp
-        <p>Senior Journalism Student at University of Maryland</p>
+        <p>Senior Journalism Student at The University of Maryland</p>
       </div>
 
       <div class="row">
@@ -54,6 +54,7 @@
       <div class="row">
         <div class="column" style="background-color:white;">
           <h2>Experience</h2>
+        <div class="jobs">
           <p>
             <font size="+1"><b>Editor-In-Chief</font></b><br>
             Unwind Magazine<br>
@@ -97,16 +98,43 @@
             Wrote and pitched arts and culture stories for this award-winning student run newspaper. Served as writer
             on the visual arts and music beats.<br>
           </p>
+        </div>
 
         </div>
 
         <div class="column" style="background-color:white;">
-          <h2>Education</h2>
-          <p>Some text..</p>
+          <h2>Skills</h2>
+          <p>
+            <ul id="do">
+              <li>AP Style</li><br>
+              <li>Photo Editing with Adobe Photoshop</li><br>
+              <li>Photo Editing with Adobe Lightroom Classic</li><br>
+              <li>Social Media Usage (Facebook, Twitter,Instagram)</li><br>
+              <li>Microsoft Office</li><br>
+              <li>CrowdTangle Data Analysis</li><br>
+              <li>Parse.ly Usage</li><br>
+              <li>Coversational Bengali</li><br>
+              <li>Conversational Spanish</li><br>
+            </ul>
+          </p>
         </div>
       </div>
 
+        <div class="row2">
+          <div class="column2" style="background-color:white;">
+            <h2>Education</h2>
+            <ul id="degrees">
+              <li>High School Diploma, Thomas S. Wootton, 2017</li><br>
+              <li>B.A., Journalism, University of Maryland, December 2021</li><br>
+            </ul>
+          </div>
+
+        </div>
+
+      </div>
 
     </div>
+
   </body>
+
 </html>
