--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -22,6 +22,43 @@
   </head>
 
   <body>
+    <!-- NavBar -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+        <div class= "collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class= "navbar-nav mr-auto">
+            <li class= "nav-item active">
+          <a class="nav-link" href="#">Name <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+          <a class="nav-link" href="#">Experience</a>
+            </li>
+            <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action One</a>
+            <a class="dropdown-item" href="#">Action Two</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Additional Actions</a>
+        </div>
+            </li>
+            <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
     <div id="container">
 
       <div class="header">
@@ -128,13 +165,13 @@
               <li>B.A., Journalism, University of Maryland, December 2021</li><br>
             </ul>
           </div>
-
         </div>
 
-      </div>
+        <footer>
+          <p>Joy Saha</p>
+          <p>Copyright 2021 JOUR352</p>
+        </footer>
 
     </div>
-
   </body>
-
 </html>
