--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -23,8 +23,8 @@
 
   <body>
     <!-- NavBar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <a class="navbar-brand">MENU</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,36 +32,23 @@
         <div class= "collapse navbar-collapse" id="navbarSupportedContent">
           <ul class= "navbar-nav mr-auto">
             <li class= "nav-item active">
-          <a class="nav-link" href="#">Name <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#header">Name <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-          <a class="nav-link" href="#">Experience</a>
+          <a class="nav-link" href="#experience">Experience</a>
             </li>
-            <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            <li class="nav-item">
+          <a class="nav-link" href="#skills" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Skills
           </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action One</a>
-            <a class="dropdown-item" href="#">Action Two</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Additional Actions</a>
-        </div>
             </li>
-            <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
           </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </nav>
 
     <div id="container">
 
-      <div class="header">
+      <div id="header">
         <h1>Joy Saha</h1> &nbsp
         <p>Senior Journalism Student at The University of Maryland</p>
       </div>
@@ -90,7 +77,7 @@
 
       <div class="row">
         <div class="column" style="background-color:white;">
-          <h2>Experience</h2>
+          <h2 id="experience">Experience</h2>
         <div class="jobs">
           <p>
             <font size="+1"><b>Editor-In-Chief</font></b><br>
@@ -140,7 +127,7 @@
         </div>
 
         <div class="column" style="background-color:white;">
-          <h2>Skills</h2>
+          <h2 id="skills">Skills</h2>
           <p>
             <ul id="do">
               <li>AP Style</li><br>
