--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -82,7 +82,7 @@
           <p>
             <font size="+1"><b>Editor-In-Chief</font></b><br>
             Unwind Magazine<br>
-            <i>2020-Present</i><br>
+            <i>2020 - Present</i><br>
             Manage a staff of writers, general assignment writers, section editors, photo editors
             and photographers. Previously served as a section editor and photographer for two years.<br>
           </p>
@@ -118,8 +118,8 @@
           <p>
             <font size="+1"><b>Diversions Reporter</font></b><br>
             The Diamondback<br>
-            <i>2018-2021</i><br>
-            Wrote and pitched arts and culture stories for this award-winning student run newspaper. Served as writer
+            <i>2018 - 2021</i><br>
+            Wrote and pitched arts and culture stories for this award-winning student run newspaper. Served as a writer
             on the visual arts and music beats.<br>
           </p>
         </div>
