--- a/resume/joy-saha-resume.html
+++ b/resume/joy-saha-resume.html
@@ -19,10 +19,11 @@
       @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Text&family=Lobster&family=Satisfy&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Cutive&family=Space+Mono:ital@0;1&display=swap');
     </style>
+
   </head>
 
   <body>
-    <!-- NavBar -->
+    <!-- custom NavBar -->
       <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand">MENU</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +70,7 @@
               <ul class="menu">
                 jaitysaha270@gmail.com
                 <a href="https://www.linkedin.com/in/joy-saha/" target="_blank">LinkedIn</a>
-                <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter
+                <a href="https://twitter.com/joysaha0?lang=en" target="_blank">Twitter</a>
                 <a href="https://github.com/joysaha101" target="_blank">GitHub</a>
               </ul>
           </div>
