--- a/data-viz-project.html
+++ b/data-viz-project.html
@@ -15,6 +15,8 @@
     <!-- custom CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
+  </head>
+
 
   <body>
 
