headline and byline

--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -66,9 +66,9 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
     <div id="container">
 
-      <h1>The Headline Goes Here</h1>
+      <h1>In Baltimore, the burden of rising temperatures isn’t shared</h1>
         <div class="byline">
-          By Byline
+          STORY BY: IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY
         </div>
       <h2>Chapter Headline</h2>
 
