--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -67,21 +67,39 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
     <div id="container">
 
       <h1>In Baltimore, the burden of rising temperatures isn’t shared</h1>
+        <p>In urban heat islands, climate crisis hits harder</p>
         <div class="byline">
           STORY BY: IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY
         </div>
-      <h2>Chapter Headline</h2>
 
-          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus tellus in urna tincidunt commodo.
-            Pellentesque non magna vitae mi tincidunt vulputate non nec magna. Nullam in placerat metus. Cras commodo imperdiet mi non tristique.
-            Praesent commodo venenatis diam a rutrum. Ut a cursus quam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-            Integer efficitur ligula elit, non bibendum ligula consequat nec. <br><br></p>
+          <p>Heat radiates from the asphalt and concrete that cover the streets, the sidewalks, the alleys, even the tiny yards behind the homes in the East
+            Baltimore neighborhood of McElderry Park. Trees are scarce. And air doesn’t move much when it comes up against block after block of rowhouses.<br><br></p>
 
-          <p> Curabitur sapien ligula, hendrerit eget elementum et, porta id metus. Donec a vehicula massa. Nunc sit amet lacus nec ipsum placerat cursus vitae vel magna.
-            Fusce ex dui, malesuada sed erat sit amet, tempor fermentum tortor. Morbi eget justo non nisi sodales sollicitudin at nec mauris.
-            Etiam vestibulum facilisis tempus. Donec tristique dui non mauris ullamcorper, sodales mattis urna tempor. Vestibulum rutrum tempus suscipit.
-            Pellentesque velit diam, semper eget tristique eget, ultricies non sem. Vivamus pulvinar venenatis mauris sit amet cursus. Maecenas metus mauris, pulvinar eget nisl eu,
-            venenatis semper tortor. Ut porta quis nisl at tempor. Nunc eu lectus a odio pretium dictum in eget neque. <br><br></p>
+          <p>So as a dangerous 11-day heat wave tormented the city in July, the hottest month ever recorded on the planet, fewer and fewer residents were going outside.<br><br></p>
+
+          <p>“Can’t even put your head out the door,” said Tammy Jackson, 48, on a day when the temperature outside hit 100 degrees Fahrenheit and 92 degrees in her home.
+            “This is too much. Oh Lord, this is too much.”<br><br></p>
+
+          <p>But it is going to get worse. In McElderry Park and around the world, in communities rich and poor, downtown and in the suburbs, weather disasters loom.
+            And experts are using language ever more dire.<br><br></p>
+
+          <p>“The single greatest threat from climate change to people in cities is extreme heat,” said Jad Daley, president and CEO of American Forests, a nonprofit
+            organization dedicated to preserving forests and planting trees.<br><br></p>
+
+          <p>In July, Anchorage, Alaska, recorded 90 degrees for the first time. Europe suffered through record temperatures, with Paris hitting 109. The heat moved across Scandinavia and into Greenland,
+            where scientists said it speeded the melting of Arctic ice that would increase flooding in coastal cities — including Baltimore.<br><br></p>
+
+          <p>Average annual temperatures in Baltimore have gone up more than 3 degrees over the last century, nearly twice as much as the rest of the country.<br><br></p>
+
+          <p>And the planet’s warming has gained momentum, say researchers who estimate the number of very hot days in Baltimore could increase six-fold by the middle of the century.<br><br></p>
+
+          <p>More and more people, including Del. Robbyn Lewis, who represents parts of East Baltimore, are replacing the words “climate change” with stronger language.<br><br></p>
+
+
+
+
+
+
 
             <figure>
               <img src="guggenheim.jpg" alt="insert description of image here" width="900" height="600"><br>
