updated byline and descriptions

--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -67,10 +67,12 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
     <div id="container">
 
       <h1>In Baltimore, the burden of rising temperatures isn’t shared</h1>
-        <p>In urban heat islands, climate crisis hits harder</p>
-        <div class="byline">
-          STORY BY: IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY<br>
+        <div class="description">
+          <p><i>In urban heat islands, climate crisis hits harder</i></p>
         </div>
+        <div class="byline">
+          STORY BY: IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY
+        </div><br>
 
           <p>Heat radiates from the asphalt and concrete that cover the streets, the sidewalks, the alleys, even the tiny yards behind the homes in the East
             Baltimore neighborhood of McElderry Park. Trees are scarce. And air doesn’t move much when it comes up against block after block of rowhouses.<br></p>
@@ -95,7 +97,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>More and more people, including Del. Robbyn Lewis, who represents parts of East Baltimore, are replacing the words “climate change” with stronger language.<br></p>
 
-      <h2>Urban Heat Islands</h2><br>
+      <h2>Urban Heat Islands</h2>
 
           <p>Cities, crowded and paved over, already feel the impact of climate change, with poorer air quality and streets, highways and bridges damaged by storms. But certain neighborhoods
             will continue to feel the effects of extreme temperatures more than others.<br></p>
@@ -129,7 +131,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>“We have to root ourselves in the reality that Baltimore for all this great history has a history of inequality and racism that we don’t like to talk about,” Baltimore City Council President Brandon M. Scott said.<br></p>
 
-    <h2>The Code Red weekend</h2><br>
+    <h2>The Code Red weekend</h2>
 
           <p>As July’s weather emergency bore down, Baltimore’s health department put out press releases advising citizens to drink water and cut back on outdoor activities. At a Thursday press conference warning of a 100-degree weekend,
             the mayor told Baltimoreans to stay inside until the weather broke Monday night.<br></p>
@@ -155,7 +157,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>But many East Baltimoreans said during the heat wave that they weren’t aware of any of City Hall’s plans or warnings. Many said they didn’t know cooling centers existed. They never looked at the website.<br></p>
 
-    <h2>Security Concerns</h2><br>
+    <h2>Security Concerns</h2>
 
           <p>Solomon Simmons, 70, and his neighbor Harriett Alexander said McElderry Park used to be more tightknit — “like a village,” Simmons said.<br></p>
 
@@ -193,7 +195,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>Lewis said, “We wouldn’t need cooling centers if we had healthy neighborhoods.”<br></p>
 
-    <h2>Heading off Catastrophe</h2><br>
+    <h2>Heading off Catastrophe</h2>
 
           <p>Twenty people have died of heat-related illnesses in Maryland so far this year, three of them in Baltimore, according to state data through Aug. 28.<br></p>
 
@@ -221,7 +223,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>“Being able to identify vulnerable areas [where people are especially endangered by heat] is very challenging,” she said. Also, “in a heat wave, everyone is at risk, including people who knock on doors.”<br></p>
 
-    <h2>Trees help with heat</h2><br>
+    <h2>Trees help with heat</h2>
 
           <p>When Baltimore officials are asked how the city is preparing for the more extreme temperatures ahead, several people point to the efforts by City Hall and volunteer groups to plant more trees. Citywide, the tree canopy in 2015 was 28%, up from 27% in 2007.<br></p>
 
@@ -237,7 +239,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>At the end of July, Scott released an agenda with 26 priorities for the coming council year. Climate change was not among them.<br></p>
 
-    <h2>Rowhouses in the heat</h2><br>
+    <h2>Rowhouses in the heat</h2>
 
           <p>Rowhouses efficiently conserve heat — which is welcome in the winter, a problem in the summer.<br></p>
 
@@ -249,7 +251,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p>It’s the largest green space for blocks. But some neighbors said they are reluctant to walk their dogs there for fear they will step on syringes discarded by people who use drugs.<br></p>
 
-    <h2>Coping with the heat</h2><br>
+    <h2>Coping with the heat</h2>
 
           <p>As temperatures in Baltimore reached 100 on July 20, most everyone around the city was staying inside. Some of the people on the streets walked under open umbrellas, carrying their own circle of shade. Men wore damp cloths draped under their caps or on the backs of their necks. No one was moving quickly.<br></p>
 
