--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -70,6 +70,14 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
         <div class="description">
           <p><i>In urban heat islands, climate crisis hits harder</i></p>
         </div>
+
+        <figure>
+          <img src="JusticeGeorgie.jpg" alt="street with limited shading" width="900" height="600"><br>
+          <figcaption>Shade is one of the only ways for many McElderry Park residents to avoid the extreme summer heat, but the neighborhood doesn’t
+            have enough mature trees to cool its streets and homes. (Photo by Justice Georgie | Wide Angle Youth Media)</figcaption>
+        </figure>
+
+
         <div class="byline">
           STORY BY: IAN ROUND, JAZMIN CONNER, JERMAINE ROWLEY AND SANDY BANISKY
         </div><br>
@@ -271,11 +279,6 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
 
           <p><i>Jake Gluck, Jane Gerard, Roxanne Ready, Theresa Diffendal and Sean Mussenden of the University of Maryland contributed to this story. Additional information was also provided by Sean McMinn, Meg Anderson and Nora Eckert of NPR.<br></i></p>
 
-
-            <figure>
-              <img src="guggenheim.jpg" alt="insert description of image here" width="900" height="600"><br>
-              <figcaption>Caption: insert description for image/video (Source: insert source)</figcaption>
-            </figure>
 
 
 
