--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -72,7 +72,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
         </div>
 
         <figure>
-          <img src="JusticeGeorgie.jpg" alt="street with limited shading" width="900" height="600"><br>
+          <img src="JusticeGeorgie.jpg" alt="street with limited shading" class="center" width="900" height="600"><br>
           <figcaption>Shade is one of the only ways for many McElderry Park residents to avoid the extreme summer heat, but the neighborhood doesn’t
             have enough mature trees to cool its streets and homes. (Photo by Justice Georgie | Wide Angle Youth Media)</figcaption>
         </figure>
