--- a/climate-crisis-story/index.html
+++ b/climate-crisis-story/index.html
@@ -72,7 +72,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
         </div>
 
         <figure>
-          <img src="JusticeGeorgie.jpg" alt="street with limited shading" class="center" width="900" height="600"><br>
+          <img src="JusticeGeorgie.jpg" alt="street with limited shading" class="center" width="900" height="600">
           <figcaption>Shade is one of the only ways for many McElderry Park residents to avoid the extreme summer heat, but the neighborhood doesn’t
             have enough mature trees to cool its streets and homes. (Photo by Justice Georgie | Wide Angle Youth Media)</figcaption>
         </figure>
@@ -113,7 +113,7 @@ integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCm
           <p>Researchers at Portland State University in Oregon and the Science Museum of Virginia have mapped these areas, called urban heat islands, and data shows that temperatures here and in
             surrounding neighborhoods can run 8 degrees hotter than in communities that have more trees and less pavement.<br></p>
 
-          <p>McElderry Park, which despite its lyrical name offers little green space, is one of these: the hottest neighborhood in Baltimore, a city whose climate has long been classified as humid subtropical.<br><br></p>
+          <p>McElderry Park, which despite its lyrical name offers little green space, is one of these: the hottest neighborhood in Baltimore, a city whose climate has long been classified as humid subtropical.<br></p>
 
           <p>Residents in the hottest areas have higher rates of chronic illnesses affected by heat, including asthma and COPD. In hot weather, emergency medical calls for some chronic conditions increase. The rate of
             emergency medical calls for cardiac arrest and congestive heart failure, for example, nearly double when the heat index hits 103 degrees.<br></p>
